--- a/app/globals.css
+++ b/app/globals.css
@@ -69,6 +69,8 @@
 @layer base {
   * {
     @apply border-border;
+    scroll-behavior: smooth;
+
   }
   body {
     @apply bg-background text-foreground;
